<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.MainActivity">

    <LinearLayout
        android:padding="@dimen/padding_default"
        android:id="@+id/data_capture_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical">
        <ScrollView
            android:layout_weight="1"
            android:id="@+id/enter_details_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_half"
            android:fadeScrollbars="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="top">

                    <android.support.design.widget.TextInputLayout
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/padding_default">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/name_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:inputType="textPersonName|textCapWords"
                            android:textSize="@dimen/typography_subheading"/>

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_default">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/voterid_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/voter_id"
                        android:textSize="@dimen/typography_subheading"
                        android:inputType="phone"
                        android:layout_marginRight="@dimen/padding_half"
                        android:layout_marginEnd="@dimen/padding_half"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_default">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/aadhar_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/aadhar_number"
                        android:textSize="@dimen/typography_subheading"
                        android:inputType="phone"
                        android:layout_marginRight="@dimen/padding_half"
                        android:layout_marginEnd="@dimen/padding_half"/>

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/padding_default">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/state_of_domicile"/>
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/state_spinner">
                </Spinner>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/padding_default">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city"/>
                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/city_spinner">
                    </Spinner>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/padding_default">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/constituency"/>
                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/constituency_spinner">
                    </Spinner>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <Button
            android:id="@+id/submit_deets"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/data_show_layout"
        android:visibility="gone"
        android:padding="@dimen/padding_default"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_half"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginRight="4dp"
                android:src="@drawable/ic_name"
                android:layout_gravity="center_vertical"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:id="@+id/name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_text"
                android:layout_gravity="center_vertical"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_half"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginRight="4dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_domicile"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:text="@string/state_of_domicile"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:id="@+id/domicile_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_text"
                android:layout_gravity="center_vertical"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_half"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginRight="4dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_constituency"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/constituency"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:id="@+id/constituency_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_text"
                android:layout_gravity="center_vertical"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_half"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginRight="4dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_voter_id"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/voter_id"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:id="@+id/voter_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_text"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_half"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginRight="4dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_aadhar_card"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aadhar_number"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:id="@+id/aadhar_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_text"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/edit_deets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="edit"/>
            <Button
                android:id="@+id/vote_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="vote"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>